--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
- "name": "App",
+ "name": "Harrison Horler",
  "icons": [
   {
    "src": "\/android-icon-36x36.png",
@@ -37,5 +37,7 @@
    "type": "image\/png",
    "density": "4.0"
   }
- ]
+ ],
+  "theme_color": "#01202f",
+  "display": "standalone"
 }
